# Druid

./: .gitattributes  .gitignore  CNAME  DESIGN.md  LICENSE  PROGRESS.md  README.md  ROADMAP.md  consistency.json  druid-design-doc.md  feed.xml  index.html  overlay.json  pyproject.toml  record.json  sample-proof.json
.github/workflows/: ci.yml  watch.yml
bundles/: 0.json  epa-climate-indicators.json  epa-drinking-water-mcl.json  epa-ghgrp.json  epa-glyphosate.json  fema-nri.json  noaa-climate-gov.json  noaa-co2-trends.json  usda-climate-hubs.json
data/: subscriptions.toml  targets.toml  terms.toml
docs/: deployment.md
docs/adr/: 0001-record-architecture-decisions.md  0002-m0-signed-hash-chain-ledger.md  0003-m1-trust-core-tlog-tiles.md  0004-rfc3161-anchoring.md  0005-anchor-aggregation-witness-model.md  0006-witness-cosignatures-in-bundle.md
event/2d6612191e198e0bbec4504743fc4c75436b8ecae01086c37d17da713c113e65/: index.html
event/3a2637ffd04040c4e0bec263007cca3b3a93cb0f47965754e4f91c178a48ddfe/: index.html
event/b5d78d3ac5f55afcd3f44750863ac09d741b08dfe483af999a65f6721c378106/: index.html
event/d38d5bd385b20d1a75201836ba4058c158a34387e85a707bdac2d7cb393e8af5/: index.html
feeds/: epa-climate-indicators.xml  epa-drinking-water-mcl.xml  epa-ejscreen.xml  epa-ghgrp-data.xml  epa-ghgrp.xml  epa-glyphosate.xml  fema-nri.xml  nca5.xml  noaa-climate-gov.xml  noaa-co2-trends.xml  usda-climate-hubs.xml  usgcrp.xml
overlay/: index.html
rust/: Cargo.toml
rust/ledger-core/: Cargo.toml
rust/ledger-core/src/: cosignature.rs  lib.rs  note.rs  ots.rs  rfc3161.rs
rust/ledger-core/tests/: ledger.rs  ots_test.rs  rfc3161_test.rs  scale.rs  tiles_test.rs
rust/ledger-wasm/: Cargo.toml
rust/ledger-wasm/src/: lib.rs
src/annals/: __main__.py  anchors.py  cli.py  models.py  notify.py  overlay.py  pipeline.py  politeness.py  scheduler.py  triage.py  warc.py  witness.py
src/annals/collectors/: render.py  static.py
src/annals/ledger/: __init__.py  core.py
src/annals/web/: export.py  feed.py  record.py
src/druid/: __init__.py  __main__.py  anchors.py  cli.py  config.py  hashing.py  models.py  notify.py  overlay.py  pipeline.py  politeness.py  scheduler.py  store.py  triage.py  warc.py  witness.py
src/druid/collectors/: __init__.py  base.py  render.py  static.py
src/druid/differ/: __init__.py  dataset.py  netcdf.py  normalize.py  numeric.py  termwatch.py
src/druid/ledger/: __init__.py  core.py  log.py
src/druid/web/: export.py  feed.py  record.py
src/verderer/: __init__.py  __main__.py  anchors.py  cli.py  mirror.py  models.py  notify.py  overlay.py  pipeline.py  politeness.py  scheduler.py  store.py  store_s3.py  triage.py  warc.py  witness.py  witness_cli.py
src/verderer/collectors/: base.py  render.py  static.py
src/verderer/differ/: dataset.py  embedding.py  normalize.py  structure.py
src/verderer/ledger/: __init__.py  core.py
src/verderer/web/: __init__.py  export.py  feed.py  record.py
tests/: conftest.py  test_anchoring.py  test_consistency.py  test_dataset.py  test_differ.py  test_embedding.py  test_fuzz.py  test_hashing.py  test_mirror.py  test_netcdf.py  test_notify.py  test_numeric.py  test_ots.py  test_overlay.py  test_pipeline.py  test_politeness.py  test_precision.py  test_proof_bundle.py  test_render.py  test_scheduler.py  test_store.py  test_tiles.py  test_triage.py  test_warc.py  test_web.py  test_witness.py  test_witness_service.py
tests/fixtures/ots/: .gitattributes  README.md  bitcoin-headers.json  bundle-ots-15.json  checkpoint-15  checkpoint-15.ots
tests/fixtures/rfc3161/: token_digicert.der  token_freetsa.der  token_untrusted.der  token_valid.der  tsa_root.crt
tile/8/0/000.p/: 27
verderer-data/: politeness-state.json  schedule-state.json
verderer-data/ledger/: checkpoint  entries.b64  export-published-checkpoint  hashes
verderer-data/ledger/tile/8/0/000.p/: 13  14  15  18  19  20  23  24  25  9
verify/: index.html
wasm/: ledger_wasm_bg.wasm
web/: astro.config.mjs  package-lock.json  package.json
web/public/: .gitattributes  checkpoint  feed.xml  overlay.json  record.json  sample-proof.json
web/public/bundles/: 1.json
web/public/feeds/: epa-climate-indicators.xml  epa-ejscreen.xml  epa-ghgrp-data.xml  epa-ghgrp.xml  usgcrp.xml
web/public/tile/8/0/000.p/: 11  3
web/public/wasm/: ledger_wasm.js
web/src/data/: overlay.json  record.json
web/src/layouts/: Base.astro
web/src/lib/: format.ts
web/src/pages/: index.astro  overlay.astro  verify.astro
web/src/pages/event/: [id].astro
