[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "druid-watchdog"
version = "0.0.1"
description = "A verifiable, tamper-evident watchdog for public environmental data."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Satchel Hamilton" }]
keywords = ["transparency", "provenance", "web-archiving", "environmental-data", "tamper-evident"]
dependencies = [
  "httpx>=0.27",
  "cryptography>=43",
  "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.scripts]
druid = "druid.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/druid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 130
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
ignore_missing_imports = true
