[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "druid-watchdog"
version = "0.0.1"
description = "A verifiable, tamper-evident watchdog for public environmental data."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Satchel Hamilton" }]
keywords = ["transparency", "provenance", "web-archiving", "environmental-data", "tamper-evident"]
dependencies = [
  "httpx>=0.27",
  "cryptography>=43",
  "beautifulsoup4>=4.12",
  "pandas>=2.2",
  "warcio>=1.7",       # faithful WARC capture + archive interop (M11)
  "pint>=0.23",        # L2 cross-unit numeric normalization (M12)
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.11",
]
# The render collector (M3b) drives headless Chromium. Optional — the core install and
# the test suite stay light; after installing, run `playwright install chromium`.
render = [
  "playwright>=1.44",
]
# Scientific/geospatial dataset diffing (M4b): NetCDF/HDF via xarray, xlsx via openpyxl.
# Optional — the tabular (CSV/JSON) and zip paths need none of it.
science = [
  "xarray>=2024.1",
  "scipy>=1.11",       # NetCDF3 classic backend
  "h5netcdf>=1.3",     # NetCDF4 / HDF5 backend
  "h5py>=3.10",
  "openpyxl>=3.1",     # .xlsx
]
# Reviewer triage (M6): L3 embedding similarity + L5 Claude change summaries. Optional and
# outside the trust core — both are best-effort reviewer aids, never attested.
triage = [
  "sentence-transformers>=3",  # L3 embeddings
  "anthropic>=0.69",           # L5 summaries (billable; needs credentials)
]

[project.scripts]
druid = "druid.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/druid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 130
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
ignore_missing_imports = true
